<resources>
    <string name="app_name">WeCheat</string>
    <string name="toolbar_title">Moments</string>
    <string name="string_noshow">~</string>
    <string name="string_camera">Camera</string>
    <string name="string_camera_specification">Supports Photos &#38; Videos</string>
    <string name="string_select_from_album">Select Photos or Videos from Album</string>
    <string name="string_nickname">Nickname</string>
    <string name="string_confirm">Confirm</string>
    <string name="take_photos_description">add a picture as your head portrait</string>
    <string name="string_enter_your_moment_text">Enter your moment text</string>
    <string name="string_add_pictures">Click To Add Pictures</string>
    <string name="string_no_name_text_entered">Please enter a name</string>
    <string name="string_read_storage_permission_denied">Read phone storage permission denied</string>

    <string name="title_activity_my_own_moments">MyOwnMomentsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="string_name_array">amazing_name</string>
    <string name="string_random_names">Random names</string>
    <string name="string_save_something">save</string>
</resources>
